core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/composition.yf
---
name: echo-composition
graphs:
  start:
    - type: Echo
      put: A
      value: "1"

    - type: Echo
      put: B
      value: ["{A}"]

    - type: StringContains
      regex: "notimportant"
      content: "[B^0]" # content :: String
      output: out

