core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/intToString.yf
---
name: full
graphs:
  start:
     - type: IntRange
       from: 1
       to: 10
       output: i

     - type: StringContains
       regex: "notimportant"
       content: "[i^0]" # content :: String
       output: output
